--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -10,10 +10,17 @@
         <h1>Welcome to the backpack landing page</h1>   
         <h2>Here are the options</h2>
         <h3>{{hello}}</h3>
-        <ul>
-            {% for choice in options %}
-            <li>{{choice}}</li>
-            {% endfor %}
-        </ul>     
+            <ul>
+                {% for choice in options %}
+                <li>{{choice}}</li>
+                {% endfor %}
+            </ul>
+        <div>
+            <form action="">
+                <input type="text", name="task">
+                <input type="submit">
+            </form>
+        </div>
+             
     </body>
 </html>
