--- a/my_backpack/backpack_app/templates/backpack/forms.html
+++ b/my_backpack/backpack_app/templates/backpack/forms.html
@@ -7,6 +7,6 @@
             <input type="text", name="task">
             <input type="submit">
         </form>   
-
+        <a href="{% url 'index' %}">Home</a>
 {% endblock %}     
 
