--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -15,12 +15,6 @@
                 <li>{{choice}}</li>
                 {% endfor %}
             </ul>
-        <div>
-            <form action="">
-                <input type="text", name="task">
-                <input type="submit">
-            </form>
-        </div>
-             
+            <a href="{% url 'forms' %}">Take me to forms</a>             
     </body>
 </html>
