added more links to home and fixed layouts.html

--- a/my_backpack/backpack_app/templates/backpack/add.html
+++ b/my_backpack/backpack_app/templates/backpack/add.html
@@ -12,5 +12,6 @@
                     {{raw}}
                 </p>           
             </ul>
+            <a href="{% url 'index' %}">Home</a>
     </body>
 </html>
