--- a/my_backpack/backpack_app/templates/backpack/greet.html
+++ b/my_backpack/backpack_app/templates/backpack/greet.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Hello</title>
-    </head>
-    <body>
+{% extends "backpack/layouts.html" %}
+
+{% block body %}
         <h1>greet page to change for results page</h1>
         <h2>Hello, {{ name }}!</h2>
-    </body>
-</html>
+{% endblock %}
+   
