--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -15,6 +15,8 @@
                 <li>{{choice}}</li>
                 {% endfor %}
             </ul>
-            <a href="{% url 'forms' %}">Take me to forms</a>             
+            <a href="{% url 'forms' %}">Take me to forms</a><br>
+            <a href="{% url 'add' %}">Take me to add</a>    
+
     </body>
 </html>
