--- a/my_backpack/backpack_app/templates/backpack/layouts.html
+++ b/my_backpack/backpack_app/templates/backpack/layouts.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,5 +7,6 @@
     <body>
         {% block body %}
         {% endblock %}
+    <a href="{% url 'index' %}">Home</a>
     </body>
 </html>
