added more links.

--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -7,7 +7,7 @@
         <link href="{% static 'backpack/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        <h1>Welcome to the backpack landing page</h1>   
+        <h1>Welcome To MyBackpack</h1>   
         <h2>Here are the options</h2>
         <h3>{{hello}}</h3>
             <ul>
