--- a/my_backpack/backpack_app/templates/backpack/layouts.html
+++ b/my_backpack/backpack_app/templates/backpack/layouts.html
@@ -1,8 +1,9 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Backpack</title>
+        <link href="{% static 'backpack/styles.css' %}" rel="stylesheet">
     </head>
     <body>
         {% block body %}
