--- a/my_backpack/backpack_app/templates/backpack/forms.html
+++ b/my_backpack/backpack_app/templates/backpack/forms.html
@@ -1,9 +1,10 @@
  {% extends "backpack/layouts.html" %}
+ 
 
  {% block body %}
     <h1>Enter a card name</h1> 
         <form action="">
-            <input type="text", name="task">
+            <input type="text", name="forms">
             <input type="submit">
         </form>   
 {% endblock %}     
