Changed project to a single paged application.
Moved away from all pages except the index and library page.

--- a/my_backpack/backpack_app/templates/backpack/forms.html
+++ b/my_backpack/backpack_app/templates/backpack/forms.html
@@ -3,9 +3,12 @@
 
  {% block body %}
     <h1>Enter a card name</h1> 
-        <form action="">
-            <input type="text", name="forms">
+        <form action="{% url 'backpack:index' %}" method="POST">
+            {% csrf_token %}
+            {{ form }}
+            <input type = "text" name='form'>
             <input type="submit">
-        </form>   
+        </form> 
+        <p>Your search history: {{ card_name }}</p>  
 {% endblock %}     
 
