--- a/my_backpack/backpack_app/templates/backpack/add.html
+++ b/my_backpack/backpack_app/templates/backpack/add.html
@@ -4,7 +4,7 @@
         <title>add</title>
     </head>
     <body>
-        <h1>Pulling info for card {{ card }}</h1>
+        <h1>Pulling info for card {{ name }}</h1>
         <h2>Hello, {{ func }}!</h2>
         <p>This is a simple search</p>
             <ul>                
@@ -12,6 +12,6 @@
                     {{raw}}
                 </p>           
             </ul>
-            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'backpack:index' %}">Home</a>
     </body>
 </html>
