added color changing js skill page

--- a/my_backpack/backpack_app/static/backpack/styles.css
+++ b/my_backpack/backpack_app/static/backpack/styles.css
@@ -1,8 +1,9 @@
 body {
     background-color: aqua;
 }
-h1 {
+h1, h2 {
     font-family: sans-serif;
     font-size: 90px;
     text-align: center;
 }
+
