added functionality to search for card prices

--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -3,11 +3,12 @@
 
 {% block body %}
    <h1>Enter a card name</h1> 
-	   <form action="{% url 'backpack:index' %}" method="POST">
+	   <form name='card_name' action="{% url 'backpack:index' %}" method="POST">
 		   {% csrf_token %}
 		   {{ form }}
-		   <input type = "text" name='form'>
+		   <input type = "text" name='card_name'>
 		   <input type="submit">
 	   </form> 
-	   <p>Your search history: {{ card_name }}</p>  
+	  <p> {{price}} </p>
+
 {% endblock %}     
