--- a/my_backpack/backpack_app/templates/backpack/layouts.html
+++ b/my_backpack/backpack_app/templates/backpack/layouts.html
@@ -9,5 +9,6 @@
         {% block body %}
         {% endblock %}
     <a href="{% url 'backpack:index' %}">Home</a>
+    <a href="{% url 'backpack:color' %}">Color Changing Page</a>
     </body>
 </html>
