Added bootstrap and pages.
Bootstrapped index added, price and library links added. added logo. added hyperlinks, and updated card text.

--- a/my_backpack/backpack_app/templates/backpack/price.html
+++ b/my_backpack/backpack_app/templates/backpack/price.html
@@ -1,6 +1,14 @@
 {% extends "backpack/layouts.html" %}
+ 
 
 {% block body %}
-    
-    <p>The current price of {{ name }} is {{ price }}</p>
-{% endblock %}
+   <h1>Enter a card name</h1> 
+	   <form name='card_name' action="{% url 'backpack:price' %}" method="POST">
+		   {% csrf_token %}
+		   {{ form }}
+		   <input type = "text" name='card_name'>
+		   <input type="submit">
+	   </form> 
+	  <p> {{ card_price }} </p>
+
+{% endblock %} 
