added linking functionality and style

--- a/my_backpack/backpack_app/templates/backpack/form_page.html
+++ b/my_backpack/backpack_app/templates/backpack/form_page.html
@@ -2,13 +2,17 @@
  
 
  {% block body %}
-    <h1>Enter a card name</h1> 
+    <h1> Forms </h1>
+    <p>This form is the base for the price form/p> 
         <form action="{% url 'backpack:index' %}" method="POST">
             {% csrf_token %}
             {{ form }}
             <input type = "text" name='form'>
             <input type="submit">
         </form> 
-        <p>Your search history: {{ card_name }}</p>  
+        <p>here should be the parameter</p>
+        <div>
+            <h3>{{ testing }}</h3>
+        </div>
 {% endblock %}     
 
