--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -28,7 +28,7 @@
     </div>
   </nav>  
   <body>
-    <h1 class="bold text-center text-decoration-underline">One Backpack to Rule Them All ...</h1>     
+    <h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>     
     <div class="d-flex justify-content-evenly pt-5 ">
     <div class="card"  style="width: 18rem; background-color:rgb(0,0,147);">
       <img src="{% static "backpack/images/library_pic.jpg" %}" class="card-img-top" alt="Library picture hyperlink and details.">
