updated rendering of card searching

--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -21,15 +21,13 @@
         <li class="nav-item">
           <a class="nav-link text-light" href="/price">Pricing</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" href="/resources">Resources</a>
-        </li>
+        
       </ul>
     </div>
   </nav>  
   <body>
     <h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>     
-    <div class="d-flex justify-content-evenly pt-5 ">
+    <div class="d-flex d-flex align-items-center flex-wrap justify-content-evenly pt-5 ">
     <div class="card"  style="width: 18rem; background-color:rgb(0,0,147);">
       <img src="{% static "backpack/images/library_pic.jpg" %}" class="card-img-top" alt="Library picture hyperlink and details.">
       <div class="card-body">
