--- a/my_backpack/backpack_app/templates/backpack/price.html
+++ b/my_backpack/backpack_app/templates/backpack/price.html
@@ -2,6 +2,7 @@
  
 
 {% block body %}
+<h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>
 
    <h2>Enter a card name</h2> 
 	   <form name='card_name' action="{% url 'backpack:price' %}" method="POST">
