added hyperlink for home

--- a/my_backpack/backpack_app/templates/backpack/layouts.html
+++ b/my_backpack/backpack_app/templates/backpack/layouts.html
@@ -9,7 +9,7 @@
   <div class="container-fluid" style="height:100vh; overflow-hidden; background:linear-gradient(white,black);">  
   <nav  class="navbar navbar-expand-lg bg-dark ">
     <div class="container-fluid">
-      <a class="navbar-brand text-light " href="/">🎒</a>
+      <a class="navbar-brand text-light " href="/">🎒 My Backpack</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
