--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -10,7 +10,7 @@
   <div class="container-fluid" style="height:100vh; overflow-hidden; background:linear-gradient(white,black);">  
   <nav  class="navbar navbar-expand-lg bg-dark ">
     <div class="container-fluid">
-      <a class="navbar-brand text-light " href="/">🎒</a>
+      <a class="navbar-brand text-light " href="/">🎒 My Backpack</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
   <body>
     <h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>     
     <div class="d-flex d-flex align-items-center flex-wrap justify-content-evenly pt-5 ">
-    <div class="card"  style="width: 18rem; background-color:rgb(0,0,147);">
+    <div class="card"  style="width: 30rem; background-color:rgb(0,0,147);">
       <img src="{% static "backpack/images/library_pic.jpg" %}" class="card-img-top" alt="Library picture hyperlink and details.">
       <div class="card-body">
         <h5 class="card-title text-light">View My Cards</h5>
@@ -38,7 +38,7 @@
           </div>
       </div>
     </div>
-    <div class="card" style="width: 18rem; background-color:rgb(237,28,36)">
+    <div class="card" style="width: 30rem; background-color:rgb(237,28,36)">
       <img src="{% static "backpack/images/price.jpg" %}" class="card-img-top" alt="Price searching option">
       <div class="card-body">
         <h5 style="color:black;" class="card-title">Make a Price Query</h5>
@@ -48,16 +48,7 @@
       </div>
       </div>
     </div>
-    <div class="card" style="width: 18rem; background-color:rgb(244,250,16);">
-      <img src="{%static "backpack\images\resources.jpg" %}" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 style="color:black;" class="card-title">Find More Information</h5>
-        <p style="color:black;" class="card-text">Check out some of the websites I most freqeuently use.</p>
-        <div class="d-grid gap-2">
-          <a href="/resources" class="btn btn-dark">Resources</a>
-      </div>
-      </div>
-    </div>
+
   </div>
 </div>
 
