--- a/my_backpack/backpack_app/templates/backpack/layouts.html
+++ b/my_backpack/backpack_app/templates/backpack/layouts.html
@@ -20,6 +20,7 @@
         <li class="nav-item">
           <a class="nav-link text-light" href="/price">Pricing</a>
         </li>
+       
         
       </ul>
     </div>
@@ -30,7 +31,7 @@
         {% block body %}
         <h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>
         {% endblock %}
-    
+    <a href="{% url 'backpack:logout_view' %}">Log Out</a>
     <!--<a href="{% url 'backpack:color' %}">Color Changing Page</a>-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
