--- a/my_backpack/backpack_app/templates/backpack/library.html
+++ b/my_backpack/backpack_app/templates/backpack/library.html
@@ -1,5 +1,5 @@
 {% extends "backpack/layouts.html" %}
-
+{% load static %}
 {% block body %}
 <h1 class="bold text-center ">View your Library</h1>
 <div class="container-fluid">
@@ -11,12 +11,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="{% static "backpack/images/price.jpg" %}"  class="d-block w-auto" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
+          
           <div class="carousel-item">
             <img src="..." class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
