--- a/my_backpack/backpack_app/templates/backpack/logout_view.html
+++ b/my_backpack/backpack_app/templates/backpack/logout_view.html
@@ -1,7 +1,6 @@
 {% load static %}
-<!doctype html>
-<html lang="en">
-  <head>
+<!DOCTYPE html>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
@@ -21,40 +20,17 @@
         <li class="nav-item">
           <a class="nav-link text-light" href="/price">Pricing</a>
         </li>
-        
+       
         
       </ul>
     </div>
-  </nav>  
-  <body>
-    <h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>     
-    <div class="d-flex d-flex align-items-center flex-wrap justify-content-evenly pt-5 ">
-    <div class="card"  style="width: 30rem; background-color:rgb(0,0,147);">
-      <img src="{% static "backpack/images/library_pic.jpg" %}" class="card-img-top" alt="Library picture hyperlink and details.">
-      <div class="card-body">
-        <h5 class="card-title text-light">View My Cards</h5>
-        <p class="card-text text-light">Check to see what cards are saved into the library.</p>        
-          <div class="d-grid gap-2">
-              <a href="/library" class="btn btn-dark">Library</a>
-          </div>
-      </div>
-    </div>
-    <div class="card" style="width: 30rem; background-color:rgb(237,28,36)">
-      <img src="{% static "backpack/images/price.jpg" %}" class="card-img-top" alt="Price searching option">
-      <div class="card-body">
-        <h5 style="color:black;" class="card-title">Make a Price Query</h5>
-        <p style="color:black;" class="card-text">Stay up to date on the latest card prices. Make a price query here.</p>
-        <div class="d-grid gap-2">
-          <a href="/price" class="btn btn-dark">Pricing</a>
-      </div>
-      </div>
-    </div>
+  </nav> 
+    <body>
 
-  </div>
-</div>
-<a href="{% url 'backpack:logout_view' %}">Log Out</a>
+<h1>Good Bye ! {{message}} </h1>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  </body>
+    </body>
 </html>
