adding cards to library eliminates duplicate entries

--- a/my_backpack/backpack_app/templates/backpack/resources.html
+++ b/my_backpack/backpack_app/templates/backpack/resources.html
@@ -15,7 +15,7 @@
                   <form name='card_name' action="{% url 'backpack:add' %}" method="POST">
                     {% csrf_token %}
                     {{ form }}
-                    <input type="submit" name='add'>
+                    <input type="submit" placeholder="Add" name='add'>
                   </form> 
                 </div>
             
