--- a/my_backpack/backpack_app/templates/backpack/index.html
+++ b/my_backpack/backpack_app/templates/backpack/index.html
@@ -23,13 +23,15 @@
         </li>
         
         
+        
+        
       </ul>
     </div>
   </nav>  
   <body>
     <h1 class="bold text-center ">One Backpack to Rule Them All ...</h1>     
     <div class="d-flex d-flex align-items-center flex-wrap justify-content-evenly pt-5 ">
-    <div class="card"  style="width: 30rem; background-color:rgb(0,0,147);">
+    <div  class="card" style="width: 30rem;  background-color:rgb(0,0,147);">
       <img src="{% static "backpack/images/library_pic.jpg" %}" class="card-img-top" alt="Library picture hyperlink and details.">
       <div class="card-body">
         <h5 class="card-title text-light">View My Cards</h5>
@@ -52,9 +54,11 @@
 
   </div>
 </div>
+
 <a href="{% url 'backpack:logout_view' %}">Log Out</a>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></s>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
