--- a/my_backpack/backpack_app/templates/backpack/library.html
+++ b/my_backpack/backpack_app/templates/backpack/library.html
@@ -1,22 +1,21 @@
 {% extends "backpack/layouts.html" %}
 {% load static %}
 {% block body %}
-<h1 class="bold text-center ">View your Library</h1>
-<div class="container-fluid">
-    <ul>
-        {% for image in img_builder %}
-        <li><img src={{image}}  class="d-block w-auto" alt="...">"</li>
-        {% endfor %}
-    </ul>
-</div>
-            {% comment %} <div container='fluid'>
-              <img src={{image}}  class="d-block w-auto" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>{{card}}</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div> {% endcomment %}
-    
+<body>
+    <div container='fluid'>
+        {% for card in backpack %}
+        <img src={{card.image_url}}   alt="...">
+          <div>
+            <h5>{{card.card_name}}</h5>
+              <p>PRICE IS {{card.price}}</p>
+          </div>
+          {% endfor %}
+      </div> 
+</body>
+
+   
+   
+             
           
 
 {% for card in added_card %}
